# python_template

./: .coveragerc  README.md  requirements.txt  setup.cfg
docs/: Makefile  index.rst  make.bat  submodule.rst
docs/_templates/autosummary/: class.rst
